<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unitslink.acde.AlarmActivity">

    <LinearLayout
        android:id="@+id/alarmLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_volt"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_volt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/volt"
                android:textSize="18dp"
                android:textColor="@color/colorDarkGray" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/switch_volt"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:kswTintColor="@color/colorThumb"
                app:kswFadeBack="true"
                app:kswTextExtra="25dp"
                app:kswTextOff="@string/off"
                app:kswTextOn="@string/on"
                app:kswThumbHeight="36dp"
                app:kswThumbWidth="36dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_current"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_current"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/current"
                android:textSize="18dp"
                android:textColor="@color/colorDarkGray" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/switch_current"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:kswTintColor="@color/colorThumb"
                app:kswFadeBack="true"
                app:kswTextExtra="25dp"
                app:kswTextOff="@string/off"
                app:kswTextOn="@string/on"
                app:kswThumbHeight="36dp"
                app:kswThumbWidth="36dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_pressure"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_pressure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/pressure"
                android:textSize="18dp"
                android:textColor="@color/colorDarkGray" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/switch_pressure"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:kswTintColor="@color/colorThumb"
                app:kswFadeBack="true"
                app:kswTextExtra="25dp"
                app:kswTextOff="@string/off"
                app:kswTextOn="@string/on"
                app:kswThumbHeight="36dp"
                app:kswThumbWidth="36dp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_temperature"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/temp"
                android:textSize="18dp"
                android:textColor="@color/colorDarkGray" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/switch_temperature"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginEnd="25dp"
                android:textColor="@color/colorGray"
                android:textSize="20sp"
                android:textStyle="bold"
                app:kswTintColor="@color/colorThumb"
                app:kswFadeBack="true"
                app:kswTextExtra="25dp"
                app:kswTextOff="@string/off"
                app:kswTextOn="@string/on"
                app:kswThumbHeight="36dp"
                app:kswThumbWidth="36dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
