<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.unitslink.acde.PanelActivity">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorbg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_appname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorDarkGray"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/ll_topbg"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/panel_top_background"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_topbg_up"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <com.unitslink.acde.DigitalTextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:fontFamily="fonts/lgdr.ttf"
                    android:text="@string/date"
                    android:textAlignment="center"
                    android:textColor="@color/colorLightGray"
                    android:textSize="22sp" />

                <ImageView
                    android:id="@+id/iv_cool"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_c1" />

                <ImageView
                    android:id="@+id/iv_heat"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_h1" />

                <ImageView
                    android:id="@+id/iv_vent"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_v1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_topbg_down"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RatingBar
                    android:id="@+id/rb_vent"
                    style="@style/ventRatingBar"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="10dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="1"
                    android:stepSize="1" />

                <RelativeLayout
                    android:id="@+id/rl_temp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_temp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="6dp"
                        android:fontFamily="monospace"
                        android:gravity="bottom"
                        android:text="@string/temp_value"
                        android:textColor="@color/colorSky"
                        android:textSize="48sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_tempunit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_toEndOf="@+id/tv_temp"
                        android:gravity="bottom"
                        android:text="@string/temp_unit"
                        android:textColor="@color/colorSky"
                        android:textSize="26sp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_center"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:gravity="top">

            <ImageView
                android:id="@+id/iv_bridge"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_gravity="top"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/bridge" />

            <me.tankery.lib.circularseekbar.CircularSeekBar
                android:id="@+id/circularSeekBar1"
                android:layout_width="210dp"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                app:cs_circle_color="@color/colorGray"
                app:cs_circle_progress_color="@color/colorSky"
                app:cs_circle_stroke_width="2dp"
                app:cs_end_angle="360"
                app:cs_pointer_halo_border_width="15dp"
                app:cs_pointer_halo_width="8dp"
                app:cs_pointer_stroke_width="15dp"
                app:cs_start_angle="180" />

            <Button
                android:id="@+id/btn_power"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="95dp"
                android:background="@drawable/btn_circle"
                android:text="" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_mode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cool"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/btn_circle"
                android:text="" />

            <Button
                android:id="@+id/btn_heat"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_circle"
                android:text="" />

            <Button
                android:id="@+id/btn_vent"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:background="@drawable/btn_circle"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_modedesc"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="center_horizontal|top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cooldesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/cooling"
                android:textAlignment="textEnd"
                android:textColor="@color/colorDarkGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_heatdesc"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/heating"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_ventdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ventilation"
                android:textAlignment="textStart"
                android:textColor="@color/colorDarkGray"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal|top"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_send"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_circle"
                android:text="" />

            <TextView
                android:id="@+id/tv_send"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/datasend"
                android:textAlignment="center"
                android:textColor="@color/colorDarkGray"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>